<resources>
    <string name="app_name">sarisEco</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="humedad">Humedad</string>
    <string name="temperatura">Temperatura</string>
    <string name="automatizar">Automatizar</string>
    <string name="vamos">Ingresar</string>
    <string name="bienvenidos_a">Bienvenidos a:</string>
    <string name="saris_eco">SARIS ECO</string>
    <string name="acciones">Acciones:</string>
    <string name="regar">Regar</string>
    <string name="reporte">Reporte</string>
    <string name="notificame">Notificame</string>
    <string name="regar_cuando_la_humedad_sea_menor_a">Regar cuando la humedad sea menor a:</string>
    <string name="_50">50%</string>
    <string name="regar_cuando_la_temperatura_caiga_por_debajo_de">Regar cuando la temperatura caiga por debajo de</string>
    <string name="_28_c">28°C</string>
    <string name="editar">Editar</string>
    <string name="floreiot">FloreIoT</string>
    <string name="background">background</string>
</resources>