<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".menu.HumedadFragment">

    <TextView
        android:id="@+id/txtHumedad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/humedad"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/lineChart"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtHumedad"/>

    <TextView
        android:id="@+id/txtAcciones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/acciones"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="15dp"
        android:layout_marginStart="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lineChart" />

    <TextView
        android:id="@+id/txtNodisponible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="(No disponible)"
        android:textSize="18sp"
        android:gravity="end"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lineChart" />

    <Button
        android:id="@+id/btnRegar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/regar"
        android:textSize="16sp"
        android:clickable="false"
        android:focusable="false"
        android:backgroundTint="@color/principal"
        android:background="@drawable/button_border"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtAcciones" />

    <Button
        android:id="@+id/btnReporte"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reporte"
        android:textSize="16sp"
        android:clickable="false"
        android:focusable="false"
        android:backgroundTint="@color/principal"
        android:background="@drawable/button_border"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnRegar" />

    <Button
        android:id="@+id/btnNotificaciones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/notificame"
        android:textSize="16sp"
        android:clickable="false"
        android:focusable="false"
        android:backgroundTint="@color/principal"
        android:background="@drawable/button_border"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnReporte" />


</androidx.constraintlayout.widget.ConstraintLayout>